Fix whitespace

--- a/frontend/src/core/editor/global/less/editor.less
+++ b/frontend/src/core/editor/global/less/editor.less
@@ -1,29 +1,29 @@
 .editor-view {
 
   .editor-container {
-    position:relative;
+    position: relative;
     width: 100%;
     height: 100%;
   }
 
   .editor-panel {
-    float:right;
-    width:10%;
+    float: right;
+    width: 10%;
   }
 
   .editor {
-    float:left;
-    width:90%;
-    height:100%;
+    float: left;
+    width: 90%;
+    height: 100%;
     background-color: lightgrey;
   }
 
   .paste-zone {
-    margin:30px;
+    margin: 30px;
     height: 50px;
 
     &-inner {
-        padding:20px 30px;
+      padding: 20px 30px;
     }
 
     &-component-left {
@@ -37,11 +37,11 @@
     }
 
     &-component {
-        margin:0px;
+      margin: 0px;
     }
 
     &-component-full {
-        margin-bottom:20px;
+      margin-bottom: 20px;
     }
 
   }
@@ -86,10 +86,6 @@
     }
   }
 
-  .open-context-icon {
-    // color: #fff;
-  }
-
   .drag-helper {
     color: #DEDEDE;
     border: 1px solid #C9C9C9;
@@ -99,7 +95,6 @@
     cursor: move;
     min-width: 100px;
   }
-
 }
 
 .editor-item-settings {
@@ -121,11 +116,11 @@
     }
 
     &-inner {
-        padding:6px;
+      padding: 6px;
     }
 
     .editor-delete-page-element {
-        float:right;
+      float: right;
     }
 }
 
@@ -139,8 +134,6 @@ i.asset-clear {
   cursor: pointer;
 }
 
-.sweet-alert {
-  .key {
-    font-weight: bold;
-  }
+.sweet-alert .key {
+  font-weight: bold;
 }
